--- a/src/app/auth/register-player/user-type-selector/user-type-selector.component.html
+++ b/src/app/auth/register-player/user-type-selector/user-type-selector.component.html
@@ -6,7 +6,7 @@
       <p>Regístrate como jugador para encontrar equipos</p>
     </div>
     <div class="option-card" (click)="selectType('team')">
-      <h3>Equipo</h3>
+      <h3>Club</h3>
       <p>Registra tu equipo para encontrar jugadores</p>
     </div>
   </div>
