--- a/src/app/features/feed/feed.component.scss
+++ b/src/app/features/feed/feed.component.scss
@@ -382,6 +382,11 @@
                 background-color: #e8f5e9;
                 color: #388e3c;
               }
+
+              &.admin {
+                background-color: #feaaaa;
+                color: #d32f2f
+              }
             }
           }
 
